--- a/style.css
+++ b/style.css
@@ -13,8 +13,6 @@ html {
 body {
   background-color: #f0f8fd;
 }
-/* end of common styles */
-
 /* main page */
 .main-page {
   width: 100%;
@@ -185,8 +183,61 @@ body {
   color: #444;
   font-weight: 300;
 }
-/* end of footer */
-/* end of main page */
+/* end of common styles */
+/* dark mode */
+.dark-mode {
+  display: flex;
+  align-items: center;
+}
+
+.dark-mode p {
+  margin-right: 8rem;
+  font-size: 1.6rem;
+  color: #868383;
+}
+
+.toggle {
+  width: 4.5rem;
+  height: 1.5rem;
+  background-color: #777;
+  border-radius: 3rem;
+  box-shadow: inset 0 0.2rem 1rem rgba(0, 0, 0, 0.3);
+  position: relative;
+}
+
+.circle {
+  width: 2rem;
+  height: 2rem;
+  background-color: #ddd;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
+  transition: all 0.1s linear;
+}
+
+.move {
+  left: 2.5rem;
+  background-color: #117abb;
+}
+
+.dark-1 {
+  background-color: #1c2938;
+}
+
+.dark-2 {
+  background-color: #10171e !important;
+}
+
+.light {
+  color: #fff;
+}
+
+.border-color {
+  border-color: #444 !important;
+}
 
 /* login page */
 .login-page {
@@ -612,6 +663,7 @@ body {
 
 .post-icons {
   margin-top: 1rem;
+  cursor: pointer;
 }
 
 .post-icons i {
@@ -620,93 +672,14 @@ body {
   margin-right: 6rem;
 }
 
-.follow {
-  position: fixed;
-  top: 8rem;
-  left: 57%;
-  background-color: #fff;
-  width: 35rem;
-  margin-left: 7rem;
-}
-
-.follow-heading {
-  padding: 1rem;
-  font-size: 1.8rem;
-  border-bottom: 0.1rem solid #eee;
-}
-
-.follow-user {
-  display: flex;
-  align-items: center;
-  padding: 1.5rem;
-  border-bottom: 0.1rem solid #eee;
-}
-
-.follow-user-img {
-  width: 6rem;
-  height: 6rem;
-  margin-right: 2rem;
-}
-
-.follow-user-img img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.follow-user-info h4,
-.follow-user-info p {
-  font-size: 1.6rem;
-  margin-bottom: 0.5rem;
-}
-
-.follow-btn {
-  margin-left: auto;
-  width: 9rem;
-  background-color: #fff;
-  color: #1aa1f5;
-  padding: 0.7rem 0.5rem;
-  border: 0.1rem solid #1aa1f5;
-  border-radius: 2rem;
-  font-size: 1.6rem;
-  cursor: pointer;
-}
-
-.follow-link {
-  margin: 2rem 1rem;
-}
-
-.follow-link a {
-  text-decoration: none;
-  color: #1aa1f5;
-  font-size: 1.5rem;
-}
-
-.follow-footer {
-  background-color: #f0f8fd;
-}
-
-.follow-footer ul {
-  list-style: none;
-  display: flex;
-  padding: 2rem 0;
-}
-
-.follow-footer a {
-  text-decoration: none;
-  font-size: 1.5rem;
-  color: #868383;
-  margin: 0 0.7rem;
-}
-/* end of feeds content */
 
 .post-btn {
   position: fixed;
   bottom: 2rem;
-  left: 68%;
+  left: 75%;
   width: 12rem;
   padding: 1.5rem 1rem;
+  padding-left: 1.5rem;
   background-color: #1aa1f5;
   color: #fff;
   font-size: 2rem;
@@ -842,8 +815,6 @@ body {
   color: #1aa1f5;
   opacity: 0.5;
 }
-/* end of post modal */
-
 /* sidebar */
 .sidebar-wrapper {
   position: fixed;
@@ -992,63 +963,6 @@ body {
   color: #868383;
 }
 
-/* dark mode */
-.dark-mode {
-  display: flex;
-  align-items: center;
-}
-
-.dark-mode p {
-  margin-right: 8rem;
-  font-size: 1.6rem;
-  color: #868383;
-}
-
-.toggle {
-  width: 4.5rem;
-  height: 1.5rem;
-  background-color: #777;
-  border-radius: 3rem;
-  box-shadow: inset 0 0.2rem 1rem rgba(0, 0, 0, 0.3);
-  position: relative;
-}
-
-.circle {
-  width: 2rem;
-  height: 2rem;
-  background-color: #ddd;
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  box-shadow: 0 0.1rem 0.3rem rgba(0, 0, 0, 0.3);
-  transition: all 0.1s linear;
-}
-
-.move {
-  left: 2.5rem;
-  background-color: #117abb;
-}
-
-.dark-1 {
-  background-color: #1c2938;
-}
-
-.dark-2 {
-  background-color: #10171e !important;
-}
-
-.light {
-  color: #fff;
-}
-
-.border-color {
-  border-color: #444 !important;
-}
-/* end of dark mode */
-/* end of sidebar */
-/* end of feeds page */
 
 /* responsive */
 @media (max-width: 1300px) {
@@ -1300,7 +1214,7 @@ body {
 .post-btn {
   left: 80%;
 }
-}
+
 
 @media (max-width: 800px) {
 /* main page */
@@ -1369,6 +1283,10 @@ body {
 
 .modal {
   width: 90%;
+}
+
+.modal-btn {
+  cursor: pointer;
 }
 
 .modal-img {
